<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.PokemonInformationActivity"
    android:isScrollContainer="true"
    android:background="@drawable/color_gradient">

    <ImageView
        android:id="@+id/closeButton"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/ic_keyboard_arrow_down"
        android:layout_width="35dp"
        android:layout_height="30dp"/>

    <View
        android:background="@drawable/background_box"
        android:layout_marginTop="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <ImageView
        android:src="@drawable/pokemone"
        android:adjustViewBounds="true"
        android:id="@+id/pokemonView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="95dp"
        android:layout_width="153dp"
        android:layout_height="153dp"/>

    <View
        android:background="@color/white_two"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <TextView
        android:id="@+id/titlePokemonName"
        android:textColor="#4f4f4f"
        android:layout_marginTop="252dp"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/title"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/logia"
        android:src="@drawable/water"
        android:adjustViewBounds="true"
        android:layout_marginTop="5dp"
        android:layout_marginStart="140dp"
        android:layout_marginEnd="140dp"
        app:layout_constraintTop_toBottomOf="@id/titlePokemonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/any" />

    <TextView
        android:id="@+id/descriptionPokemon"
        android:textAlignment="center"
        android:text="@string/content_example"
        android:layout_marginEnd="22dp"
        android:layout_marginStart="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toBottomOf="@id/logia"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="15sp"/>

    <Button
        android:id="@+id/statButton"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/descriptionPokemon"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/stats"
        style="@style/button_style" />

    <Button
        android:id="@+id/movesButton"
        android:layout_marginEnd="20dp"
        android:text="@string/moves"
        app:layout_constraintBottom_toBottomOf="@id/statButton"
        app:layout_constraintTop_toTopOf="@id/statButton"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/button_style_unselected"/>

    <Button
        android:id="@+id/evolutionButton"
        android:text="@string/evolution"
        app:layout_constraintEnd_toStartOf="@id/movesButton"
        app:layout_constraintStart_toEndOf="@id/statButton"
        app:layout_constraintBottom_toBottomOf="@id/statButton"
        app:layout_constraintTop_toTopOf="@id/statButton"
        style="@style/button_style_unselected"/>

    <FrameLayout
        android:layout_marginTop="15dp"
        android:id="@+id/frameLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/movesButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>